<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
        android:padding="20dp" android:layout_height="match_parent">

    <EditText
            android:id="@+id/mEditTextFieldNumber"
            android:hint="@string/field"
            android:singleLine="true"
            android:padding="15dp"
            android:inputType="number"
            android:cursorVisible="false"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/ic_storage_black_24dp"
            android:background="@drawable/bg_input_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <EditText
            android:id="@+id/mEditTextFieldName"
            android:hint="@string/name"
            android:singleLine="true"
            android:padding="15dp"
            android:layout_marginTop="20dp"
            android:cursorVisible="false"
            app:layout_constraintTop_toBottomOf="@+id/mEditTextFieldNumber"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/ic_storage_black_24dp"
            android:background="@drawable/bg_input_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <EditText
            android:layout_marginTop="20dp"
            android:id="@+id/mEditTextLength"
            app:layout_constraintTop_toBottomOf="@+id/mEditTextFieldName"
            android:hint="@string/length"
            android:singleLine="true"
            android:cursorVisible="false"
            android:drawablePadding="10dp"
            android:padding="15dp"
            android:inputType="number"
            android:drawableLeft="@drawable/ic_storage_black_24dp"
            android:background="@drawable/bg_input_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <Spinner
            android:id="@+id/mSpinner"
            android:background="@drawable/bg_data_list"
            android:spinnerMode="dropdown"
            android:clipToPadding="true"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/mEditTextLength"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <ImageView
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/mEditTextLength"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/ImageView"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_arrow_drop_down_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <Button
            android:id="@+id/mButtonSave"
            android:padding="10dp"
            android:text="@string/save"
            android:textColor="@drawable/bg_text_selector"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/bg_base_button_selector"
            app:layout_constraintTop_toBottomOf="@+id/mSpinner"
            android:layout_width="150dp"
            android:layout_height="wrap_content"/>


    <Button
            android:id="@+id/mButtonClose"
            android:text="@string/close"
            android:textColor="@drawable/bg_text_selector"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/bg_base_button_selector"
            app:layout_constraintTop_toBottomOf="@+id/mSpinner"
            android:layout_width="150dp" android:layout_height="wrap_content"/>

</android.support.constraint.ConstraintLayout>

