<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_menu"
        android:padding="20dp"
        tools:context=".screens.menu.MenuActivity">

    <TextView
            android:text="@string/introduction"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/mButtonParseMsg"
            android:layout_width="0dp"
            android:layout_marginBottom="20dp"
            android:layout_height="wrap_content"/>


    <Button
            android:id="@+id/mButtonParseMsg"
            android:clickable="true"
            android:text="@string/parse_msg"
            android:textAllCaps="false"
            android:textColor="@drawable/bg_text_selector"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/bg_menu_button_selector"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_height="wrap_content"/>

    <Button
            android:id="@+id/mButtonConfig"
            android:clickable="true"
            android:layout_marginTop="20dp"
            android:text="@string/config_field"
            app:layout_constraintTop_toBottomOf="@+id/mButtonParseMsg"
            android:textAllCaps="false"
            android:textColor="@drawable/bg_text_selector"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/bg_menu_button_selector"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

</android.support.constraint.ConstraintLayout>