<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:id="@+id/mConstraintLayoutGroup"
        android:elevation="4dp"
        android:padding="20dp"
        android:layout_margin="10dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/bg_config_item"
        android:layout_height="wrap_content">


    <TextView
            android:id="@+id/mTextViewNumberLabel"
            android:text="@string/numberItem"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <TextView
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toEndOf="@+id/mTextViewNumberLabel"
            android:id="@+id/mTextViewNumberValue"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:background="@drawable/bg_number_rectangle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/mTextViewNameLabel"
            android:text="@string/nameItem"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/mTextViewNumberLabel"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <TextView
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toEndOf="@+id/mTextViewNameLabel"
            android:id="@+id/mTextViewNameValue"
            android:layout_marginTop="10dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mTextViewNumberValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/mTextViewLengthLabel"
            android:text="@string/lengthItem"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/mTextViewNameValue"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <TextView
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toEndOf="@+id/mTextViewLengthLabel"
            android:id="@+id/mTextViewLengthValue"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/mTextViewNameValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/mTextViewTypeLabel"
            android:text="@string/typeItem"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/mTextViewLengthLabel"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <TextView
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toEndOf="@+id/mTextViewTypeLabel"
            android:id="@+id/mTextViewTypeValue"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/mTextViewLengthValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <ImageView
            android:id="@+id/mImageViewEdit"
            android:clickable="true"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mTextViewTypeValue"
            android:focusable="true"
            android:src="@drawable/bg_type_edit_selector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <ImageView
            android:id="@+id/mImageViewDelete"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mTextViewTypeValue"
            android:layout_marginTop="20dp"
            android:src="@drawable/bg_type_delete_selector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

</android.support.constraint.ConstraintLayout>